more adjusts on QC

--- a/quality_check/pages/improper_keys_crossings.html
+++ b/quality_check/pages/improper_keys_crossings.html
@@ -73,7 +73,7 @@ tr:nth-child(even) {
     <th><b>OSM ID (link)</b></th>
     <th><b>key</b></th>
     <th><b>value</b></th>
-    <th><b>commentary</b></th>'
+    <th><b>commentary</b></th>
     </tr><tr><td><a href=https://www.openstreetmap.org/way/24576715>24576715</a></td><td>kerb</td><td>lowered</td><td>kerbs are points, crossings are lines</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/517108523>517108523</a></td><td>kerb</td><td>lowered</td><td>kerbs are points, crossings are lines</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/517108524>517108524</a></td><td>kerb</td><td>lowered</td><td>kerbs are points, crossings are lines</td></tr>
