--- a/quality_check/pages/improper_keys_kerbs.html
+++ b/quality_check/pages/improper_keys_kerbs.html
@@ -73,9 +73,8 @@ tr:nth-child(even) {
     <th><b>OSM ID (link)</b></th>
     <th><b>key</b></th>
     <th><b>value</b></th>
-    <th><b>commentary</b></th>'
+    <th><b>commentary</b></th>
     </tr><tr><td><a href=https://www.openstreetmap.org/node/603560947>603560947</a></td><td>crossing</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/603560947>603560947</a></td><td>crossing_ref</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/846529453>846529453</a></td><td>crossing</td><td>marked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/846529467>846529467</a></td><td>crossing</td><td>traffic_signals</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/846529470>846529470</a></td><td>crossing</td><td>traffic_signals</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
@@ -83,13 +82,10 @@ tr:nth-child(even) {
 <tr><td><a href=https://www.openstreetmap.org/node/846529481>846529481</a></td><td>crossing</td><td>traffic_signals</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/1229468354>1229468354</a></td><td>crossing</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/1395984082>1395984082</a></td><td>crossing</td><td>marked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/1395984082>1395984082</a></td><td>crossing_ref</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/2331647911>2331647911</a></td><td>crossing</td><td>traffic_signals</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/2331647914>2331647914</a></td><td>crossing</td><td>uncontrolled</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/2385144841>2385144841</a></td><td>crossing</td><td>uncontrolled</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/2385144841>2385144841</a></td><td>crossing_ref</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/2385144844>2385144844</a></td><td>crossing</td><td>uncontrolled</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/2385144844>2385144844</a></td><td>crossing_ref</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/2651925073>2651925073</a></td><td>crossing</td><td>marked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/2682647758>2682647758</a></td><td>crossing</td><td>unmarked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/2682647759>2682647759</a></td><td>crossing</td><td>unmarked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
@@ -100,9 +96,7 @@ tr:nth-child(even) {
 <tr><td><a href=https://www.openstreetmap.org/node/3507819516>3507819516</a></td><td>crossing</td><td>traffic_signals</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/3746752900>3746752900</a></td><td>crossing</td><td>marked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/4232919888>4232919888</a></td><td>crossing</td><td>uncontrolled</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/4232919888>4232919888</a></td><td>crossing_ref</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/4232919905>4232919905</a></td><td>crossing</td><td>uncontrolled</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/4232919905>4232919905</a></td><td>crossing_ref</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/4496710650>4496710650</a></td><td>crossing</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/4496710651>4496710651</a></td><td>crossing</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/4604865115>4604865115</a></td><td>crossing</td><td>uncontrolled</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
@@ -126,25 +120,17 @@ tr:nth-child(even) {
 <tr><td><a href=https://www.openstreetmap.org/node/6223620976>6223620976</a></td><td>crossing</td><td>unmarked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/6223620977>6223620977</a></td><td>crossing</td><td>marked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/6226321495>6226321495</a></td><td>crossing</td><td>uncontrolled</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/6226321495>6226321495</a></td><td>crossing_ref</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/6226321508>6226321508</a></td><td>crossing</td><td>uncontrolled</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/6226321508>6226321508</a></td><td>crossing_ref</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/6336344925>6336344925</a></td><td>crossing</td><td>marked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/6336344925>6336344925</a></td><td>crossing_ref</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/6336344931>6336344931</a></td><td>crossing</td><td>marked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/6336344931>6336344931</a></td><td>crossing_ref</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/6336344932>6336344932</a></td><td>crossing</td><td>marked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/6336344932>6336344932</a></td><td>crossing_ref</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/6403047144>6403047144</a></td><td>crossing</td><td>unmarked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/6403047145>6403047145</a></td><td>crossing</td><td>unmarked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/6455927373>6455927373</a></td><td>crossing</td><td>uncontrolled</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/6455927373>6455927373</a></td><td>crossing_ref</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/6484488050>6484488050</a></td><td>crossing</td><td>uncontrolled</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/6484488050>6484488050</a></td><td>crossing_ref</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/6635844913>6635844913</a></td><td>crossing</td><td>traffic_signals</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/7042277861>7042277861</a></td><td>crossing</td><td>marked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/7052469464>7052469464</a></td><td>crossing</td><td>marked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/7052469464>7052469464</a></td><td>crossing_ref</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/7130275471>7130275471</a></td><td>crossing</td><td>marked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/7130275473>7130275473</a></td><td>crossing</td><td>uncontrolled</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/8692701170>8692701170</a></td><td>crossing</td><td>uncontrolled</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
@@ -180,15 +166,12 @@ tr:nth-child(even) {
 <tr><td><a href=https://www.openstreetmap.org/node/8890631911>8890631911</a></td><td>crossing</td><td>unmarked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/8891164694>8891164694</a></td><td>crossing</td><td>unmarked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/9307002733>9307002733</a></td><td>crossing</td><td>traffic_signals</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/9307002733>9307002733</a></td><td>crossing_ref</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/9307002734>9307002734</a></td><td>crossing</td><td>traffic_signals</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/9307002734>9307002734</a></td><td>crossing_ref</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/9366157641>9366157641</a></td><td>crossing</td><td>marked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/9414623617>9414623617</a></td><td>crossing</td><td>uncontrolled</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/9414623618>9414623618</a></td><td>crossing</td><td>uncontrolled</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/9414623619>9414623619</a></td><td>crossing</td><td>uncontrolled</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/9415950953>9415950953</a></td><td>crossing</td><td>uncontrolled</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/9415950953>9415950953</a></td><td>crossing_ref</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/9644798120>9644798120</a></td><td>crossing</td><td>unmarked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 
 
