--- a/quality_check/pages/improper_keys_sidewalks.html
+++ b/quality_check/pages/improper_keys_sidewalks.html
@@ -73,7 +73,7 @@ tr:nth-child(even) {
     <th><b>OSM ID (link)</b></th>
     <th><b>key</b></th>
     <th><b>value</b></th>
-    <th><b>commentary</b></th>'
+    <th><b>commentary</b></th>
     </tr><tr><td><a href=https://www.openstreetmap.org/way/558002152>558002152</a></td><td>opening_hours</td><td>Tu-Su 06:00-20:00; Mo off</td><td>if it has opening hours it may be a private pathway, not a sidewalk</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/558002153>558002153</a></td><td>opening_hours</td><td>Tu-Su 06:00-20:00; Mo off</td><td>if it has opening hours it may be a private pathway, not a sidewalk</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/558002154>558002154</a></td><td>opening_hours</td><td>Tu-Su 06:00-20:00; Mo off</td><td>if it has opening hours it may be a private pathway, not a sidewalk</td></tr>
