--- a/quality_check/pages/invalid_characters_crossings.html
+++ b/quality_check/pages/invalid_characters_crossings.html
@@ -73,8 +73,19 @@ tr:nth-child(even) {
     <th><b>OSM ID (link)</b></th>
     <th><b>key</b></th>
     <th><b>value</b></th>
-    <th><b>commentary</b></th>'
-    </tr>
+    <th><b>commentary</b></th>
+    </tr><tr><td><a href=https://www.openstreetmap.org/way/955446101>955446101</a></td><td>ANY (check at feature link)</td><td>crossing=crossing=unmarked_footway=crossing_highway=footway_footway=crossing_highway=footway</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/955446102>955446102</a></td><td>ANY (check at feature link)</td><td>crossing=unmarked_footway=crossing_highway=footway</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/955446103>955446103</a></td><td>ANY (check at feature link)</td><td>crossing=unmarked_footway=crossing_highway=footway</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/955446104>955446104</a></td><td>ANY (check at feature link)</td><td>crossing=unmarked_footway=crossing_highway=footway</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/955446105>955446105</a></td><td>ANY (check at feature link)</td><td>crossing=unmarked_footway=crossing_highway=footway</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/955446106>955446106</a></td><td>ANY (check at feature link)</td><td>crossing=unmarked_footway=crossing_highway=footway</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/955446107>955446107</a></td><td>ANY (check at feature link)</td><td>crossing=unmarked_footway=crossing_highway=footway</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/955446108>955446108</a></td><td>ANY (check at feature link)</td><td>crossing=unmarked_footway=crossing_highway=footway</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/955446117>955446117</a></td><td>ANY (check at feature link)</td><td>crossing=unmarked_footway=crossing_highway=footway</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/957994254>957994254</a></td><td>ANY (check at feature link)</td><td>crossing=unmarked_footway=crossing_highway=footway</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/957994255>957994255</a></td><td>ANY (check at feature link)</td><td>crossing=unmarked_footway=crossing_highway=footway_lit=yes</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
+
 
         </table>
 
