--- a/quality_check/pages/invalid_characters_kerbs.html
+++ b/quality_check/pages/invalid_characters_kerbs.html
@@ -73,8 +73,9 @@ tr:nth-child(even) {
     <th><b>OSM ID (link)</b></th>
     <th><b>key</b></th>
     <th><b>value</b></th>
-    <th><b>commentary</b></th>'
-    </tr>
+    <th><b>commentary</b></th>
+    </tr><tr><td><a href=https://www.openstreetmap.org/node/8842953120>8842953120</a></td><td>ANY (check at feature link)</td><td>lowered=no</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
+
 
         </table>
 
