--- a/quality_check/pages/replaceable_values_crossings.html
+++ b/quality_check/pages/replaceable_values_crossings.html
@@ -73,7 +73,7 @@ tr:nth-child(even) {
     <th><b>OSM ID (link)</b></th>
     <th><b>key</b></th>
     <th><b>value</b></th>
-    <th><b>commentary</b></th>'
+    <th><b>commentary</b></th>
     </tr><tr><td><a href=https://www.openstreetmap.org/way/24576715>24576715</a></td><td>crossing</td><td>zebra</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/24775977>24775977</a></td><td>crossing</td><td>zebra</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/82637218>82637218</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
