--- a/quality_check/pages/uncanny_keys_sidewalks.html
+++ b/quality_check/pages/uncanny_keys_sidewalks.html
@@ -73,7 +73,7 @@ tr:nth-child(even) {
     <th><b>OSM ID (link)</b></th>
     <th><b>key</b></th>
     <th><b>value</b></th>
-    <th><b>commentary</b></th>'
+    <th><b>commentary</b></th>
     </tr><tr><td><a href=https://www.openstreetmap.org/way/24959939>24959939</a></td><td>name</td><td>Travessa Nestor de Castro</td><td>most sidewalks dont have an actual name</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/32944187>32944187</a></td><td>name</td><td>Rua Gaspar Carnilho Júnior</td><td>most sidewalks dont have an actual name</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/48988570>48988570</a></td><td>name</td><td>Rua Lápis</td><td>most sidewalks dont have an actual name</td></tr>
