--- a/quality_check/pages/wrong_mispelled_or_unlisted_values_kerbs.html
+++ b/quality_check/pages/wrong_mispelled_or_unlisted_values_kerbs.html
@@ -73,69 +73,19 @@ tr:nth-child(even) {
     <th><b>OSM ID (link)</b></th>
     <th><b>key</b></th>
     <th><b>value</b></th>
-    <th><b>commentary</b></th>'
+    <th><b>commentary</b></th>
     </tr><tr><td><a href=https://www.openstreetmap.org/node/8837121682>8837121682</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837121682>8837121682</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837121682>8837121682</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837121682>8837121682</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837121682>8837121682</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837121685>8837121685</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837121685>8837121685</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837121685>8837121685</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837121685>8837121685</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/8837121685>8837121685</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/8837121687>8837121687</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837121687>8837121687</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837121687>8837121687</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837121687>8837121687</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837121687>8837121687</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837125829>8837125829</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837125829>8837125829</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837125829>8837125829</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837125829>8837125829</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/8837125829>8837125829</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/8837125831>8837125831</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837125831>8837125831</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837125831>8837125831</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837125831>8837125831</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837125831>8837125831</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837125868>8837125868</a></td><td>kerb</td><td>normal</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837125868>8837125868</a></td><td>kerb</td><td>normal</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837125868>8837125868</a></td><td>kerb</td><td>normal</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837125868>8837125868</a></td><td>kerb</td><td>normal</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/8837125868>8837125868</a></td><td>kerb</td><td>normal</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/8837125870>8837125870</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837125870>8837125870</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837125870>8837125870</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837125870>8837125870</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8837125870>8837125870</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8842953120>8842953120</a></td><td>kerb</td><td>lowered=no</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8842953120>8842953120</a></td><td>kerb</td><td>lowered=no</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8842953120>8842953120</a></td><td>kerb</td><td>lowered=no</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8842953120>8842953120</a></td><td>kerb</td><td>lowered=no</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/8842953120>8842953120</a></td><td>kerb</td><td>lowered=no</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/8846406967>8846406967</a></td><td>tactile_paving</td><td>bad</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8846406967>8846406967</a></td><td>tactile_paving</td><td>bad</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8846406967>8846406967</a></td><td>tactile_paving</td><td>bad</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8869854125>8869854125</a></td><td>kerb</td><td>normal</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8869854125>8869854125</a></td><td>kerb</td><td>normal</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8869854125>8869854125</a></td><td>kerb</td><td>normal</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8869854125>8869854125</a></td><td>kerb</td><td>normal</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/8869854125>8869854125</a></td><td>kerb</td><td>normal</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/8890907326>8890907326</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8890907326>8890907326</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8890907326>8890907326</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8890907326>8890907326</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8890907326>8890907326</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/8891106244>8891106244</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8891106244>8891106244</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8891106244>8891106244</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8891106244>8891106244</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8891106244>8891106244</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8891106246>8891106246</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8891106246>8891106246</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8891106246>8891106246</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/8891106246>8891106246</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/8891106246>8891106246</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
 
 
