--- a/quality_check/pages/invalid_characters_sidewalks.html
+++ b/quality_check/pages/invalid_characters_sidewalks.html
@@ -73,8 +73,10 @@ tr:nth-child(even) {
     <th><b>OSM ID (link)</b></th>
     <th><b>key</b></th>
     <th><b>value</b></th>
-    <th><b>commentary</b></th>'
-    </tr>
+    <th><b>commentary</b></th>
+    </tr><tr><td><a href=https://www.openstreetmap.org/way/1070407718>1070407718</a></td><td>ANY (check at feature link)</td><td>highway=footway footway=sidewalk surface=paving_stones paving_stones=good</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1070407721>1070407721</a></td><td>ANY (check at feature link)</td><td>highway=footway footway=sidewalk surface=paving_stones paving_stones=good</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
+
 
         </table>
 
