--- a/quality_check/pages/replaceable_values_sidewalks.html
+++ b/quality_check/pages/replaceable_values_sidewalks.html
@@ -73,7 +73,7 @@ tr:nth-child(even) {
     <th><b>OSM ID (link)</b></th>
     <th><b>key</b></th>
     <th><b>value</b></th>
-    <th><b>commentary</b></th>'
+    <th><b>commentary</b></th>
     </tr>
 
         </table>
