--- a/quality_check/pages/uncanny_keys_kerbs.html
+++ b/quality_check/pages/uncanny_keys_kerbs.html
@@ -73,7 +73,7 @@ tr:nth-child(even) {
     <th><b>OSM ID (link)</b></th>
     <th><b>key</b></th>
     <th><b>value</b></th>
-    <th><b>commentary</b></th>'
+    <th><b>commentary</b></th>
     </tr><tr><td><a href=https://www.openstreetmap.org/node/1395984082>1395984082</a></td><td>button_operated</td><td>yes</td><td>it may be referring to the crossing, may be OK</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/3507819516>3507819516</a></td><td>button_operated</td><td>no</td><td>it may be referring to the crossing, may be OK</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/6336344925>6336344925</a></td><td>button_operated</td><td>yes</td><td>it may be referring to the crossing, may be OK</td></tr>
