--- a/quality_check/pages/invalid_characters_kerbs.html
+++ b/quality_check/pages/invalid_characters_kerbs.html
@@ -15,6 +15,9 @@
 
         body {
                 font-family: 'Poppins', sans-serif;
+                    font-size: 20px;
+                    text-align: center;
+                    color: black;
 
             }
 
@@ -34,6 +37,7 @@ h1 {text-align: center;}
 
 
 table {
+    font-size: 15px;
   border-collapse: collapse;
   width: 100%;
 }
