SoTM poster revisions

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
         <div class="media__body">
 
-            <h1>Statistics</h1>
+            <h1>Dashboard</h1>
 
         </div>
 
@@ -261,7 +261,7 @@
 
         <div class="media__body">
 
-            <h1>Quality Check</h1>
+            <h1>Data Quality Tool</h1>
 
         </div>
 
