--- a/quality_check/oswm_qc_main.html
+++ b/quality_check/oswm_qc_main.html
@@ -80,13 +80,13 @@ h1 {
 
 </style>
 
-<title>OpenSidewalkMap Quality Check</title>
+<title>OpenSidewalkMap Data Quality Tool</title>
 
 <link rel="icon" type="image/x-icon" href="../assets/homepage/favicon_homepage.png">
 
 <body>
 
-<h1>OpenSidewalkMap Quality Check</h1>
+<h1>OpenSidewalkMap Data Quality Tool</h1>
 
 <p>
 This Section is dedicated to find errors in the Features of interest in the Context of OSWM project.<br>
