--- a/quality_check/pages/count_by_feature_crossings.html
+++ b/quality_check/pages/count_by_feature_crossings.html
@@ -25,7 +25,7 @@
 
 
 
-        <title>OSWM QC c occurrence_per_feature</title>
+        <title>OSWM DQT c occurrence_per_feature</title>
 
         
 
@@ -58,7 +58,7 @@ tr:nth-child(even) {
         </head>
         <body>
 
-        <h1><a href="https://kauevestena.github.io/opensidewalkmap_beta">OSWM</a> Quality Check: crossings occurrence_per_feature</h1>
+        <h1><a href="https://kauevestena.github.io/opensidewalkmap_beta">OSWM</a> Data Quality Tool: crossings occurrence_per_feature</h1>
 
         <h2>About: Features with more than one occurrence may be prioritized!!</h2>
         <h2>Type: count</h2>
