--- a/quality_check/pages/improper_keys_sidewalks.html
+++ b/quality_check/pages/improper_keys_sidewalks.html
@@ -25,7 +25,7 @@
 
 
 
-        <title>OSWM QC s improper_keys</title>
+        <title>OSWM DQT s improper_keys</title>
 
         
 
@@ -58,7 +58,7 @@ tr:nth-child(even) {
         </head>
         <body>
 
-        <h1><a href="https://kauevestena.github.io/opensidewalkmap_beta">OSWM</a> Quality Check: sidewalks improper_keys</h1>
+        <h1><a href="https://kauevestena.github.io/opensidewalkmap_beta">OSWM</a> Data Quality Tool: sidewalks improper_keys</h1>
 
         <h2>About: Keys that (almost certainly) shouldn't be used at that feature type</h2>
         <h2>Type: keys</h2>
