--- a/quality_check/pages/invalid_characters_crossings.html
+++ b/quality_check/pages/invalid_characters_crossings.html
@@ -25,7 +25,7 @@
 
 
 
-        <title>OSWM QC c invalid_characters</title>
+        <title>OSWM DQT c invalid_characters</title>
 
         
 
@@ -58,7 +58,7 @@ tr:nth-child(even) {
         </head>
         <body>
 
-        <h1><a href="https://kauevestena.github.io/opensidewalkmap_beta">OSWM</a> Quality Check: crossings invalid_characters</h1>
+        <h1><a href="https://kauevestena.github.io/opensidewalkmap_beta">OSWM</a> Data Quality Tool: crossings invalid_characters</h1>
 
         <h2>About: characters that should not be in the value or in the key</h2>
         <h2>Type: tags</h2>
