--- a/quality_check/pages/keys_without_wiki_sidewalks.html
+++ b/quality_check/pages/keys_without_wiki_sidewalks.html
@@ -25,7 +25,7 @@
 
 
 
-        <title>OSWM QC s keys_without_wiki</title>
+        <title>OSWM DQT s keys_without_wiki</title>
 
         
 
@@ -58,7 +58,7 @@ tr:nth-child(even) {
         </head>
         <body>
 
-        <h1><a href="https://kauevestena.github.io/opensidewalkmap_beta">OSWM</a> Quality Check: sidewalks keys_without_wiki</h1>
+        <h1><a href="https://kauevestena.github.io/opensidewalkmap_beta">OSWM</a> Data Quality Tool: sidewalks keys_without_wiki</h1>
 
         <h2>About: Keys that may be wrong, because there's no wiki article for it</h2>
         <h2>Type: keys</h2>
