--- a/quality_check/pages/replaceable_values_sidewalks.html
+++ b/quality_check/pages/replaceable_values_sidewalks.html
@@ -25,7 +25,7 @@
 
 
 
-        <title>OSWM QC s replaceable_values</title>
+        <title>OSWM DQT s replaceable_values</title>
 
         
 
@@ -58,7 +58,7 @@ tr:nth-child(even) {
         </head>
         <body>
 
-        <h1><a href="https://kauevestena.github.io/opensidewalkmap_beta">OSWM</a> Quality Check: sidewalks replaceable_values</h1>
+        <h1><a href="https://kauevestena.github.io/opensidewalkmap_beta">OSWM</a> Data Quality Tool: sidewalks replaceable_values</h1>
 
         <h2>About: values that are not wrong, but there's a better  option that is in the commentary</h2>
         <h2>Type: values</h2>
