--- a/quality_check/pages/uncanny_keys_kerbs.html
+++ b/quality_check/pages/uncanny_keys_kerbs.html
@@ -25,7 +25,7 @@
 
 
 
-        <title>OSWM QC k uncanny_keys</title>
+        <title>OSWM DQT k uncanny_keys</title>
 
         
 
@@ -58,7 +58,7 @@ tr:nth-child(even) {
         </head>
         <body>
 
-        <h1><a href="https://kauevestena.github.io/opensidewalkmap_beta">OSWM</a> Quality Check: kerbs uncanny_keys</h1>
+        <h1><a href="https://kauevestena.github.io/opensidewalkmap_beta">OSWM</a> Data Quality Tool: kerbs uncanny_keys</h1>
 
         <h2>About: Keys that may be OK in some specific situations, but may be a mistake</h2>
         <h2>Type: keys</h2>
