--- a/quality_check/pages/wrong_mispelled_or_unlisted_values_crossings.html
+++ b/quality_check/pages/wrong_mispelled_or_unlisted_values_crossings.html
@@ -25,7 +25,7 @@
 
 
 
-        <title>OSWM QC c wrong_mispelled_or_unlisted_values</title>
+        <title>OSWM DQT c wrong_mispelled_or_unlisted_values</title>
 
         
 
@@ -58,7 +58,7 @@ tr:nth-child(even) {
         </head>
         <body>
 
-        <h1><a href="https://kauevestena.github.io/opensidewalkmap_beta">OSWM</a> Quality Check: crossings wrong_mispelled_or_unlisted_values</h1>
+        <h1><a href="https://kauevestena.github.io/opensidewalkmap_beta">OSWM</a> Data Quality Tool: crossings wrong_mispelled_or_unlisted_values</h1>
 
         <h2>About: Values that are probably wrong, but they may be mispelled or just unlisted</h2>
         <h2>Type: values</h2>
