vectiles are closer, but not close enough for F4G

--- a/misc/vector_grid_working.html
+++ b/misc/vector_grid_working.html
@@ -161,9 +161,9 @@
                     return f.properties.id;
                 },
 
-                onEachFeature: function (feature, layer) {
-                    layer.bindPopup('<h1>'+feature.properties.f1+'</h1><p>name: '+feature.properties.f2+'</p>');
-                }
+                // onEachFeature: function (feature, layer) {
+                //     layer.bindPopup('<h1>'+feature.properties.f1+'</h1><p>name: '+feature.properties.f2+'</p>');
+                // }
             }
 
 
