prior to replacements testing

--- a/index.html
+++ b/index.html
@@ -449,16 +449,16 @@ pedestrians
     as part of my PhD work at <a href="https://www.ufpr.br/portalufpr/" style="color: rgb(243, 243, 172);">UFPR</a> <br>
     this work is funded  by <a href="https://www.gov.br/capes/pt-br" style="color: rgb(243, 243, 172);">CAPES</a> <br><br>
     
-    Source is code avaliable at 
+    Source is code referred at:
 
     
-    <a href="https://github.com/kauevestena/opensidewalkmap_beta" style="color: rgb(243, 243, 172);">GitHub</a> <br>
+    <a href="https://github.com/kauevestena/opensidewalkmap" style="color: rgb(243, 243, 172);">GitHub</a> <br>
 
 
 </p>
 
 <!-- Place this tag where you want the button to render. -->
-<a class="github-button" href="https://github.com/kauevestena/opensidewalkmap_beta" data-color-scheme="no-preference: dark_dimmed; light: dark_dimmed; dark: dark_dimmed;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star kauevestena/opensidewalkmap_beta on GitHub">Star</a>
+<a class="github-button" href="https://github.com/kauevestena/opensidewalkmap_beta/" data-color-scheme="no-preference: dark_dimmed; light: dark_dimmed; dark: dark_dimmed;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star kauevestena/opensidewalkmap_beta/ on GitHub">Star</a>
 
 <!-- Place this tag where you want the button to render. -->
 <a class="github-button" href="https://github.com/kauevestena" data-color-scheme="no-preference: dark_dimmed; light: dark_dimmed; dark: dark_dimmed;" data-size="large" data-show-count="false" aria-label="Follow @kauevestena on GitHub">Follow @kauevestena</a>
